<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_settings_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cl_settings_control"
        app:layout_constraintVertical_weight=".4">

        <org.opencv.android.JavaCamera2View
            android:id="@+id/jcv_settings_camera"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/iv_settings_preview"
            app:layout_constraintHorizontal_weight=".4"/>

        <ImageView
            android:id="@+id/iv_settings_preview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toRightOf="@+id/jcv_settings_camera"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_weight=".6"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_settings_control"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_settings_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_weight=".6">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_settings_scaling"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cl_settings_brightness">

            <TextView
                android:id="@+id/tv_settings_scaling"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/sb_settings_scaling"
                app:layout_constraintHorizontal_weight=".2"
                android:gravity="center"
                android:text="@string/tv_settings_scaling"/>

            <SeekBar
                android:id="@+id/sb_settings_scaling"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toRightOf="@+id/tv_settings_scaling"
                app:layout_constraintRight_toLeftOf="@+id/et_settings_scaling"
                app:layout_constraintHorizontal_weight=".6"
                android:min="1"
                android:max="@integer/scaling_max"/>

            <EditText
                android:id="@+id/et_settings_scaling"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/sb_settings_scaling"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_weight=".2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:maxLines="1"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                android:gravity="center"
                android:text="1"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_settings_brightness"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_settings_scaling"
            app:layout_constraintBottom_toTopOf="@id/cl_settings_contrast">

            <TextView
                android:id="@+id/tv_settings_brightness"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/sb_settings_brightness"
                app:layout_constraintHorizontal_weight=".2"
                android:gravity="center"
                android:text="@string/tv_settings_brightness"/>

            <SeekBar
                android:id="@+id/sb_settings_brightness"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toRightOf="@+id/tv_settings_brightness"
                app:layout_constraintRight_toLeftOf="@+id/et_settings_brightness"
                app:layout_constraintHorizontal_weight=".6"
                android:min="1"
                android:max="@integer/brightness_max"/>

            <EditText
                android:id="@+id/et_settings_brightness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/sb_settings_brightness"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_weight=".2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:maxLines="1"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                android:gravity="center"
                android:text="1"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_settings_contrast"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_settings_brightness"
            app:layout_constraintBottom_toTopOf="@+id/cl_settings_edge">

            <TextView
                android:id="@+id/tv_settings_contrast"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/sb_settings_contrast"
                app:layout_constraintHorizontal_weight=".2"
                android:gravity="center"
                android:text="@string/tv_settings_contrast"/>

            <SeekBar
                android:id="@+id/sb_settings_contrast"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toRightOf="@+id/tv_settings_contrast"
                app:layout_constraintRight_toLeftOf="@+id/et_settings_contrast"
                app:layout_constraintHorizontal_weight=".6"
                android:min="1"
                android:max="@integer/contrast_max"/>

            <EditText
                android:id="@+id/et_settings_contrast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/sb_settings_contrast"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_weight=".2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:maxLines="1"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                android:gravity="center"
                android:text="1"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_settings_edge"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/cl_settings_contrast"
            app:layout_constraintBottom_toTopOf="@id/cl_settings_gamma">

            <TextView
                android:id="@+id/tv_settings_edge"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/sb_settings_edge"
                app:layout_constraintHorizontal_weight=".2"
                android:gravity="center"
                android:text="@string/tv_settings_edge"/>

            <SeekBar
                android:id="@+id/sb_settings_edge"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toRightOf="@+id/tv_settings_edge"
                app:layout_constraintRight_toLeftOf="@+id/et_settings_edge"
                app:layout_constraintHorizontal_weight=".6"
                android:min="1"
                android:max="@integer/edge_max"/>

            <EditText
                android:id="@+id/et_settings_edge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/sb_settings_edge"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_weight=".2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:maxLines="1"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                android:gravity="center"
                android:text="1"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_settings_gamma"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/cl_settings_edge"
            app:layout_constraintBottom_toTopOf="@id/cl_settings_button">

            <TextView
                android:id="@+id/tv_settings_gamma"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/sb_settings_gamma"
                app:layout_constraintHorizontal_weight=".2"
                android:gravity="center"
                android:text="@string/tv_settings_gamma"/>

            <SeekBar
                android:id="@+id/sb_settings_gamma"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toRightOf="@+id/tv_settings_gamma"
                app:layout_constraintRight_toLeftOf="@+id/et_settings_gamma"
                app:layout_constraintHorizontal_weight=".6"
                android:min="1"
                android:max="@integer/gamma_max"/>

            <EditText
                android:id="@+id/et_settings_gamma"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/sb_settings_gamma"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_weight=".2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:maxLines="1"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                android:gravity="center"
                android:text="1"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/cl_settings_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/cl_settings_gamma"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b_settings_capture"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/b_settings_capture"
                android:textColor="#FFFFFF"
                android:background="@drawable/inset_background_grey"/>

            <Button
                android:id="@+id/b_settings_save"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/b_settings_save"
                android:textColor="#FFFFFF"
                android:background="@drawable/inset_background_grey"/>

            <Button
                android:id="@+id/b_settings_reset"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/b_settings_reset"
                android:textColor="#FFFFFF"
                android:background="@drawable/inset_background_grey"/>

            <Button
                android:id="@+id/b_settings_exit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/b_settings_exit"
                android:textColor="#FFFFFF"
                android:background="@drawable/inset_background_red"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>